--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,16 @@
-<!doctype html><html><head><meta charset="utf-8"><link rel="stylesheet" href="styles/popup-vendor.css"><link rel="stylesheet" href="styles/main.css"></head><body><h1>MultiWindow Positioner</h1><script src="scripts/popup-vendor.js"></script><script src="scripts/popup.js"></script></body></html>
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/popup-vendor.css">
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+
+<body>
+    <h1>MultiWindow Positioner</h1>
+    <script src="scripts/popup-vendor.js"></script>
+    <script src="scripts/popup.js"></script>
+</body>
+
+</html>
